Ajout des link du css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/02564f9a5d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/headerstyle.css">
+    <link rel="stylesheet" href="./css/mainstyle.css">
+    <link rel="stylesheet" href="./css/footerstyle.css">
     <title>Reservia</title>
 </head>
 <body>
