Ajout du css pour le mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- Header -->
     <header>
-        <nav  id="section-navigation">
+        <nav id="section-navigation">
 
             <div id="logo-reservia"><img src="./img/logo/Reservia.png" alt="Logo Reservia"></div>
             <div class="hover-item nav-items"><a href="#">Hebergements</a></div>
@@ -32,7 +32,7 @@
         <main>
 
             <!-- Début section Search -->
-            <section>
+            <section class="section-recherche">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p class="padding-text">En plein centre ville ou en pleine nature</p>
     
@@ -180,7 +180,7 @@
                 <!-- Vignette 2 -->
                 <div class="activite-vignette-double">
                     <div class="activites-item-pomegues">
-                        <img class="activite-pomegues-img" src="./img/activités/paul-hermann.jpg" alt="Fort de Pomègues">
+                        <img class="activite-pomegues-img activite-petite-img" src="./img/activités/paul-hermann.jpg" alt="Fort de Pomègues">
                         <h3 class="activites-texte">Fort de Pomègues</h3> 
                     </div>
 
