--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
                  <ul id="section-filtres-items">
                     <li class="section-filtes-item"><i class="fas fa-money-bill-wave section-filtres-icon"></i><p class="section-filtres-title">Economique</p></li>
                     <li class="section-filtes-item"><i class="fas fa-child section-filtres-icon"></i><p class="section-filtres-title">Familial</p></li>
-                     <li class="section-filtes-item"><i class="fas fa-heart section-filtres-icon"></i><p class="section-filtres-title">Romantique</p></li>
+                    <li class="section-filtes-item"><i class="fas fa-heart section-filtres-icon"></i><p class="section-filtres-title">Romantique</p></li>
                     <li class="section-filtes-item"><i class="fas fa-dog section-filtres-icon"></i><p class="section-filtres-title">Animaux autorisés</p></li>
                 </ul>
             </section>
-            <div>
-                 
-                <p><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
+            <div>                
+                <p id="information"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
             
             <!-- Fin section Filtres -->
